<?xml version="1.0"?>
<package>
  <name>aruco_tracker</name>
  <version>0.0.1</version>
  <description>
    This package calculates the pose of an ArUco.
  </description>
  <maintainer email="bryan@pensasystems.com">Bryan Ribas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.pensasystems.com/</url>
  <url type="bugtracker">https://github.com/Pensasystems/aruco_tracker/issues</url>
  <url type="repository">https://github.com/Pensasystems/aruco_tracker</url>
  <author>Bryan Ribas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
<run_depend>std_msgs</run_depend>
</package>
